# Programmentwurf_1_Lars_Victoria

./: CMakeLists.txt
include/: developer.h  developer_group.h
src/: developer.c  developer_group.c  main  main.c
